SwDoc::ConvertFieldsToText(): don't insert empty strings

Prevents an assert on accessing sText[0] in InsertString().

Manually cherry-picked from 85a8c1361dccb2c3b98458c2c1c377d5de275d0e
to resolve fdo#77720, see bt here https://bugs.freedesktop.org/attachment.cgi?id=97684

Change-Id: I1828694a4c1e46f8b48cf3571ec2bf4dd615bf2c